--- a/build.gradle
+++ b/build.gradle
@@ -23,3 +23,9 @@ dependencies {
     testImplementation(group: 'junit', name: 'junit', version: '4.12')
 }
 
+test {
+  testLogging {
+    events "PASSED", "FAILED", "SKIPPED"
+  }
+  scanForTestClasses = true
+}
