--- a/build.gradle
+++ b/build.gradle
@@ -29,3 +29,20 @@ test {
   }
   scanForTestClasses = true
 }
+
+integrationTest {
+  testLogging {
+    events "PASSED", "FAILED", "SKIPPED"
+  }
+}
+
+sharedLibrary {
+  coreVersion = "2.288"
+  testHarnessVersion = "2.72"
+  pipelineTestUnitVersion = "1.9"
+  pluginDependencies {
+    dependency("org.jenkins-ci.plugins","job-dsl","1.77")
+    dependency("org.jenkins-ci.plugins","cloudbees-folder","6.15")
+    dependency("org.jenkins-ci.plugins.workflow", "workflow-aggregator", "2.6")
+  }
+}
